# sfmlGame

./: .gitignore  CMakeLists.txt  Engine.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  GameMenu.cpp  GameMenu.hpp  MainMenu.cpp  MainMenu.hpp  README.md  Snake.cpp  Snake.hpp  main.cpp
CoreGame/: CMakeLists.txt  Engine.hpp  Food.cpp  Food.hpp  Snake.cpp  Snake.hpp
UI/: CMakeLists.txt  GameMenu.hpp  MainMenu.cpp  MainMenu.hpp
libs/glm-0.9.9.8/doc/api/: jquery.js
